[package]
name = "borg-exporter"
version = "0.1.0"
authors = ["koral"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0.7", features = ["derive"] }
env_logger = "0.8.4"
log = "0.4.0"
prometheus_exporter = { version = "0.8", default-features = false, features = ["logging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
